path of credit in credit request detail

--- a/assets/modules/creditRequest/views/view.html
+++ b/assets/modules/creditRequest/views/view.html
@@ -15,7 +15,7 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Crédito</label>
             <div class="col-sm-10">
-                <h4>{{creditView.data.credit.name}}</h4>
+                <h4>{{creditView.data.path}}</h4>
             </div>
         </div>
 
